兼容方法单独分类 DestroyBed Method